modified:   .vscode/settings.json 	modified:   package-lock.json 	modified:   public/index.html 	modified:   src/assets/css/style.css 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.otf 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.ttf 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/helvetica_neue_w01_87_hv_cn_obl-webfont.woff 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/helvetica_neue_w01_87_hv_cn_obl-webfont.woff2 	modified:   src/components/Manager/HomeList.js

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,15 @@
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
       rel="stylesheet" />
+<!-- <style type="text/css">
+@font-face{
+    font-family:"helvetica";
+    src:url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf") format("woff"),
+    url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf") format("opentype"),
+    url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf") format("truetype");
+}
 
+</style> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
     <meta
       name="viewport"
